src/objects/MX_SB_VTS_FamliaProveedores__c.object
<CustomObject>
    <description>Objeto intermedio para asignar familias a proveedores</description>
    <fields>
        <fullName>MX_SB_VTS_Familia_de_productos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nombre de la familia de productos.</description>
        <label>Familia de productos</label>
        <referenceTo>MX_WB_FamiliaProducto__c</referenceTo>
        <relationshipLabel>Familia Productos Proveedores</relationshipLabel>
        <relationshipName>Familia_Productos_Proveedores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Identificador_Proveedor__c</fullName>
        <description>Código de proveedor.</description>
        <formula>TEXT(MX_SB_VTS_ProveedorCTI__r.MX_SB_VTS_Identificador_Proveedor__c)</formula>
        <label>Identificador Proveedor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ProveedorCTI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nombre del proveedor.</description>
        <label>ProveedorCTI</label>
        <referenceTo>MX_SB_VTS_ProveedoresCTI__c</referenceTo>
        <relationshipLabel>Familia Productos Proveedores</relationshipLabel>
        <relationshipName>Familia_Productos_Proveedores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Familia Producto Proveedor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Familia Producto Proveedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Familia Productos Proveedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>